# QueryGenie

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  db.py  langchain_sql.py  logging_audit.py  pyproject.toml  query_validator.py  requirements-dev.txt  requirements.txt  safe_executor.py  semantic_schema.py
tests/: __init__.py  test_validator.py
